--- a/GroupMembers.html
+++ b/GroupMembers.html
@@ -1,22 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-</head>
-<body>
-
-  <div style="text-align: center;">
-    <h1>My Group</h1>
-    <br>
-    <h3>Group member list:</h3>
-    <!-- Please put team members here -->
-    <div>
-        <p> Krishna Ranchhod </p>
-	<p></p>
-	<p></p>
+  </head>
+  <body>
+    <div style="text-align: center">
+      <h1>My Group</h1>
+      <br />
+      <h3>Group member list:</h3>
+      <!-- Please put team members here -->
+      <div>
+        <p>Krishna Ranchhod</p>
+        <p>Paul Singh</p>
+        <p></p>
+      </div>
     </div>
-  </div>
-
-</body>
+  </body>
 </html>
