Add name to HTML

--- a/GroupMembers.html
+++ b/GroupMembers.html
@@ -9,11 +9,10 @@
       <h1>My Group</h1>
       <br />
       <h3>Group member list:</h3>
-      <!-- Please put team members here -->
       <div>
         <p>Krishna Ranchhod</p>
         <p>Paul Singh</p>
-        <p></p>
+	<p>Purnima Upekshani Hapugala Hapugala-Arachchige</p>
       </div>
     </div>
   </body>
